# MasterRepoRefactor

./: .gitignore  CMakeLists.txt  New Text Document (2).txt  New Text Document.txt  README.md  errors during build.md  morebuilderrors.md
Atlas/: CMakeLists.txt
Atlas/Config/Editor/: default_editor_config.json
Atlas/Config/Security/: archive_intake_policy.json  path_policy.json  session_capabilities.json  tool_allowlist.json
Atlas/Core/: CMakeLists.txt
Atlas/Core/src/: AtlasCore_stub.cpp
Atlas/Editor/: CMakeLists.txt  EditorShell.cpp  EditorShell.h
Atlas/Editor/AI/: DiffReviewPanel.cpp  DiffReviewPanel.h
Atlas/Editor/Camera/: EditorCameraController.cpp  EditorCameraController.h  EditorCameraTypes.h
Atlas/Editor/Commands/: CommandStack.cpp  CommandStack.h  CommandTypes.h  PropertyEditCommand.cpp  PropertyEditCommand.h  TransformCommand.cpp  TransformCommand.h  VoxelEditCommand.cpp  VoxelEditCommand.h
Atlas/Editor/Core/: EditorDockLayout.cpp  EditorDockLayout.h  EditorFoundationBootstrap.cpp  EditorLaunchBridge.cpp  EditorLaunchBridge.h  EditorModeController.cpp  EditorModeController.h  EditorTypes.h  PatchApplicator.h
Atlas/Editor/Docs/: ADLPanel.cpp  ADLPanel.h  DesignDocPanel.cpp  DesignDocPanel.h  FeatureChecklistPanel.cpp  FeatureChecklistPanel.h
Atlas/Editor/EditorServices/: LocalLLMBackend.cpp
Atlas/Editor/Gizmos/: GizmoSystem.cpp  GizmoSystem.h  GizmoTypes.h  PlacementSystem.cpp  PlacementSystem.h
Atlas/Editor/Input/: EditorInputRouter.cpp  EditorInputRouter.h  EditorInputTypes.h
Atlas/Editor/Inspector/: InspectorTypes.h  PropertyInspector.cpp  PropertyInspector.h
Atlas/Editor/Outliner/: HierarchyNode.h  OutlinerTypes.h  SceneHierarchySystem.cpp  SceneHierarchySystem.h  SceneOutliner.cpp  SceneOutliner.h
Atlas/Editor/PCG/: BuilderToolActionId.h  PCGDebugSystem.cpp  PCGDebugSystem.h  PCGDebugTypes.h
Atlas/Editor/Panels/: AIBuildLogPanel.h  AIContextPanel.h  AIPromptPanel.h  AISuggestionPanel.h  ConsolePanel.h  DiagnosticsPanel.h  DiffPanelWidget.h  ECSInspectorPanel.cpp  NetInspectorPanel.cpp  NetInspectorPanel.h  SymbolSearchPanel.h  WorkspaceSwitcherPanel.h
Atlas/Editor/Prefabs/: PrefabLibrary.cpp  PrefabLibrary.h  PrefabManager.cpp  PrefabManager.h  PrefabTypes.h
Atlas/Editor/Selection/: SelectionSystem.cpp  SelectionSystem.h  SelectionTypes.h
Atlas/Editor/ToolLayer/: AIBehaviorTreeTool.h  AIDebuggerTool.h  AIPerceptionTool.h  AbilitySystemDebuggerTool.h  ActorPaletteTool.h  AnimationBlendSpaceTool.h  AnimationCompressionTool.h  AnimationCurveEditorTool.h  AnimationEditorTool.h  AnimationStateMachineTool.h  AssetBundleComposerTool.h  AssetPackagingTool.h  AssetRegistryTool.h  AssetStatsPanel.h  AtmosphereEditorTool.h  AudioMixerTool.h  AudioReverbZoneTool.h  AudioSpatializationTool.h  AudioZoneTool.h  BatchOperationsTool.h  BiomePainterTool.h  BlueprintCommentTool.h  BlueprintDebuggerTool.h  BlueprintMacroLibraryTool.h  BlueprintNativeEventTool.h  CameraShakeTool.h  CameraTrackingTool.h  CameraViewTool.h  ChaosCacheTool.h  ChaosDestructionTool.h  CharacterCustomizerTool.h  CinematicDirectorTool.h  CinematicLightingTool.h  CinematicSequencerTool.h  ClimateZoneTool.h  ClothSimulationTool.h  CollisionEditorTool.h  ConstraintEditorTool.h  ControlRigTool.h  ConversationGraphTool.h  (+136 more)
Atlas/Editor/Validation/: BuilderEntityValidator.h  ValidationSystem.cpp  ValidationSystem.h  ValidationTypes.h
Atlas/Editor/Voxel/: VoxelChunkEditor.cpp  VoxelChunkEditor.h  VoxelEditorMode.cpp  VoxelEditorMode.h  VoxelTypes.h
Atlas/Editor/src/: AtlasEditor_stub.cpp
Atlas/Engine/: CMakeLists.txt
Atlas/Engine/Animation/: AnimationNodes.cpp
Atlas/Engine/AssetPipeline/: AssetImportRules.cpp  AssetImportRules.h  AssetImportValidator.cpp  AssetImportValidator.h  AssetNamingRules.cpp  AssetNamingRules.h
Atlas/Engine/Assets/: AssetFormat.h  AssetRegistry.cpp  AssetRegistry.h
Atlas/Engine/Audio/: AudioSystem.cpp  AudioSystem.h
Atlas/Engine/Camera/: Camera.cpp
Atlas/Engine/Config/: ExternalDepsManifest.h  KeybindConfig.cpp  KeybindConfig.h  LaunchConfig.cpp  LaunchConfig.h  SchemaVersionRegistry.cpp  SchemaVersionRegistry.h
Atlas/Engine/Core/: GameSystemsRegistry.cpp  GameSystemsRegistry.h  Logger.cpp  Logger.h  RuntimeDiagnostics.cpp  RuntimeDiagnostics.h
Atlas/Engine/Data/: DataRegistry.h
Atlas/Engine/ECS/: ComponentRegistry.cpp  ComponentRegistry.h  ECS.cpp  ECS.h  EntityRegistry.cpp  EntityRegistry.h
Atlas/Engine/Input/: InputContextManager.cpp  InputContextManager.h
Atlas/Engine/Modules/: ModuleSubsystem.cpp  ModuleSubsystem.h
Atlas/Engine/Networking/: NetSession.cpp  NetSession.h
Atlas/Engine/PCG/: PCGDeterminismEngine.cpp  PCGDeterminismEngine.h  PreviewMeshGenerator.h
Atlas/Engine/Physics/: PhysicsExtensions.cpp  PhysicsExtensions.h  PhysicsTypes.h
Atlas/Engine/Plugin/: PluginSystem.cpp
Atlas/Engine/Rendering/: RenderViewport.cpp  RenderViewport.h  Renderer.cpp  Renderer.h
Atlas/Engine/SaveLoad/: SaveLoadExtensions.cpp  SaveLoadExtensions.h
Atlas/Engine/Scene/: AchievementBodyRegistry.h  AnimationBodyRegistry.h  AudioBodyRegistry.h  ContentPackRegistry.h  DialogBodyRegistry.h  EventBodyRegistry.h  FXBodyRegistry.h  SceneGraph.cpp  (+50 more)
Atlas/Runtime/: CMakeLists.txt
Atlas/UI/: CMakeLists.txt  RuntimeUIHooks.cpp  RuntimeUIShell.cpp
NovaForge/: CMakeLists.txt  novaforge.project.json
NovaForge/App/: CMakeLists.txt
NovaForge/Client/: CMakeLists.txt
NovaForge/Gameplay/: CMakeLists.txt
NovaForge/Save/: CMakeLists.txt
NovaForge/Server/: CMakeLists.txt
NovaForge/UI/: CMakeLists.txt
NovaForge/World/: CMakeLists.txt
Services/: CMakeLists.txt
Services/AtlasAssetService/: CMakeLists.txt
Services/AtlasBuildService/: CMakeLists.txt
Services/AtlasSessionService/: CMakeLists.txt
Services/AtlasTelemetryService/: CMakeLists.txt
Services/AtlasWorldService/: CMakeLists.txt
Shared/: CMakeLists.txt
Shared/ArbiterBridgeContract/: CMakeLists.txt
Shared/Logging/: MasterLogger.h  log_utils.py
Shared/ProjectManifests/: README.md  masterrepo.legacy.project.json  novaforge.project.json
Shared/ToolProtocol/: README.md
(+915 files in other folders)
